# jazzjackrabbit_taller1

./: .gitignore  CMakeLists.txt  MANUAL_DE_INSTALACION.txt  Makefile  README.md  Vagrantfile  config.yml
client_src/: CMakeLists.txt  SoundManager.cpp  UIManager.cpp  camara.cpp  client.cpp  clientReceiver.cpp  controlador_cliente.cpp  controlador_cliente.h  drawer.cpp  entity.cpp  event_handler.cpp  game.cpp  game.h  main.cpp  map_creator.cpp  model_updater.cpp  player.cpp  player.h  protocol.cpp  protocol.h
client_src/assets/background/: Notas de disposicion de mapas.txt
client_src/assets/background/castle_erlong_map/: castle_earlong_mapa.csv
client_src/assets/background/medivo_map/: Medivo_model_Fondo.csv  Medivo_model_Terreno solido.csv  Medivo_model_Terreno transparente.csv  Medivo_model_Terreno_completo.csv  Medivo_model_Terreno_solido.csv  Medivo_model_Terreno_transparente.csv  mediva_map_csv.csv
client_src/assets/music/: Jazz_Jackrabbit_2 -Soundtrack_effects.aup3
client_src/headers/: Animation.h  Exception.h  Fuente.h  Music.h  SdlException.h  SdlTexture.h  Sound.h  SoundManager.h  UIManager.h  camara.h  client.h  clientReceiver.h  controlador_cliente.h  drawer.h  entity.h  event_handler.h  game.h  map_creator.h  model_updater.h  player.h  protocol.h  texture_ids.h  tile.h
client_src/sdl_libs/: Animation.cpp  Animation.h  Area.cpp  Area.h  Exception.cpp  Fuente.cpp  Music.cpp  SdlException.cpp  SdlTexture.cpp  SdlTexture.h  SdlWindow.cpp  SdlWindow.h  Sound.cpp
client_src/setupscreen/: CMakeLists.txt  ClientName.cpp  ClientName.h  ConnectMenu.cpp  ConnectMenu.h  CreateGame.cpp  CreateGame.h  CreateMap.cpp  CreateMap.h  GameList.cpp  GameList.h  JoinGame.cpp  JoinGame.h  MapList.cpp  MapList.h  MenuDialog.cpp  MenuDialog.h  MultiplayerMenu.cpp  MultiplayerMenu.h  SetupScreen.cpp  SetupScreen.h  styles.qss
common_src/: Container.cpp  commands.h  liberror.cpp  protocol.cpp  resolver.cpp  resolvererror.cpp  socket.cpp
common_src/headers/: Container.h  Message.h  cheat_commands.h  commands.h  desconection.h  entity_commands.h  error.h  protocol.h  queue.h  socketInterface.h  sound_commands.h
editor_src/: CMakeLists.txt  drawer_editor.cpp  main.cpp  map_creator.cpp
editor_src/assets/: 4  castle_earlong_mapa
editor_src/assets/castle_erlong_map/: castle_earlong_transparentes.csv
editor_src/assets/medivo_map/: Medivo_model_Terreno_completo.csv  Medivo_model_Terreno_solido.csv
editor_src/headers/: Music.h  drawer_editor.h  map_creator.h  tile.h
editor_src/sdl_libs/: Fuente.cpp  SdlException.cpp  SdlTexture.cpp  SdlWindow.cpp  Sound.cpp
editor_src/setupscreen_editor/: AppMenu.cpp  AppMenu.h  CMakeLists.txt  CreateMap.cpp  CreateMap.h  ModifyMap.cpp  ModifyMap.h  SetupScreen.cpp  SetupScreen.h
manuales/: ManualDeInstalacion.txt
server_src/: CMakeLists.txt  GameBroadcasterContainer.cpp  GameContainer.cpp  GameManager.cpp  GamesManager.cpp  acceptor.cpp  aceptador.cpp  aceptador.h  banana.cpp  bat.cpp  broadcaster.cpp  client.cpp  clientReceiver.cpp  clientSender.cpp  clock.cpp  contenedor.cpp  enemigo.cpp  enemigo.h  game.cpp  game.h  ghost.cpp  gold_coin.cpp  jazz.cpp  jugador.cpp  jugador.h  lista_objetos.cpp  lori.cpp  main.cpp  mapa.cpp  mapa.h  monitor_clients.cpp  monkey.cpp  municion.cpp  objeto.cpp  objeto.h  partida.cpp  partida.h  personaje.cpp  personaje.h  pickup.cpp  (+7 more)
server_src/characters/: character.cpp  jazz.cpp  lori.cpp  personaje.cpp  spaz.cpp
server_src/enemies/: bat.cpp  enemigo.cpp  enemy.cpp  ghost.cpp  monkey.cpp
server_src/game/: clock.cpp  game.cpp  lista_objetos.cpp  map.cpp  mapa.cpp  object.cpp  object_list.cpp  objeto.cpp
server_src/headers/: GameBroadcasterContainer.h  GameContainer.h  GameManager.h  GamesManager.h  acceptor.h  aceptador.h  banana.h  bat.h  broadcaster.h  bullet.h  bullet_ammo.h  carrot.h  character.h  client.h  clientReceiver.h  clientSender.h  clock.h  contenedor.h  enemigo.h  enemy.h  game.h  gem.h  ghost.h  gold_coin.h  icebullet.h  icebullet_ammo.h  jazz.h  jugador.h  lista_objetos.h  lori.h  map.h  mapa.h  monitor_clients.h  monkey.h  municion.h  object.h  object_list.h  objeto.h  partida.h  personaje.h  (+12 more)
server_src/logica/: enemigo.cpp  enemigo.h  main.cpp  objeto.cpp  objeto.h  personaje.cpp  personaje.h
server_src/mapas/: medivo
server_src/maps/: ADASD  Castle_Earlong  Castle_Earlong_spawn  Castle_Earlong_spawns  DFGD  DFGD_spawns  JGHJ  JGHJG  KÑ  Medivo  Medivo_modified  Medivo_spawns  PrimeraCreacion  PrimeraCreacion_spawns  Prueba  PruebaEdicion1  PruebaEdicion1_spawns  SDFSD  asd  asdasd  asf  bcbc  bdf  bdfgbfhh  csdfa  dasdasd  dfasd  dfgd  dgdf  dgsd  dgsdg  fdgsdg  fgs  fgsd  fgsdg  fh  fjf  fsafsaf  fsdfs  fsfs  (+12 more)
server_src/maps_aux/: Medivo
server_src/pickups/: bullet_ammo.cpp  carrot.cpp  gem.cpp  gold_coin.cpp  icebullet_ammo.cpp  municion.cpp  pickup.cpp  poisoned_carrot.cpp  rocket_ammo.cpp  rocket_pickup.cpp  zanahoria.cpp  zanahoria_envenenada.cpp
server_src/projectiles/: bullet.cpp  icebullet.cpp  projectile.cpp  rocket.cpp
tests_src/: protocolo_cliente_test.cpp  tests.cpp
