add_library(server_lib
    enemies/enemigo.cpp
    enemies/bat.cpp
    enemies/ghost.cpp
    enemies/monkey.cpp
    pickups/municion.cpp
    pickups/pickup.cpp
    pickups/zanahoria.cpp
    pickups/gold_coin.cpp
    characters/personaje.cpp
    characters/jazz.cpp
    characters/lori.cpp
    characters/spaz.cpp
    game/game.cpp
    game/mapa.cpp
    game/objeto.cpp
    game/lista_objetos.cpp
    game/clock.cpp
    GamesManager.cpp
    GameBroadcasterContainer.cpp
    protocol.cpp
    broadcaster.cpp
    client.cpp
    clientReceiver.cpp
    clientSender.cpp
    acceptor.cpp
    server.cpp
    banana.cpp
    ../common_src/Container.cpp
    ../common_src/liberror.cpp
    ../common_src/protocol.cpp
    ../common_src/resolver.cpp
    ../common_src/resolvererror.cpp
    ../common_src/socket.cpp
    monitor_clients.cpp
)

target_include_directories(server_lib PRIVATE headers/*)
target_include_directories(server_lib PRIVATE ../common_src/headers/*)